[package]
name = "readenv"
version = "0.1.0"
authors = ["Artem Skoretskiy <artem.skoretskiy@gmail.com>"]
edition = "2018"
license = "MIT"
keywords = ["env", ".env", "dotenv", "12factor"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "renv"
path = "src/main.rs"

[dependencies]
dotenv = "0.15.0"
exec = "0.3.1"

[profile.release]
opt-level = "z"
lto = "fat"
panic = "abort"
